@@ -70,6 +70,8 @@ Version 1.0
  * Added experimental Python 3 support.
  * Added better support for returning timezone names.
  * Don't throw away a Catalog's obsolete messages when updating it.
+ * Added basic likelySubtag resolving when doing locale parsing and no
+   match can be found.
 
 
 Version 0.9.6
